// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleComponentTest render expanded with content-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="content-class-name collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render expanded with content-class-name: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <FluentUIV9Icon
      iconName="ChevronDown24Regular"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest render expanded without content-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render expanded without content-class-name: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <FluentUIV9Icon
      iconName="ChevronDown24Regular"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest render with container-class-name 1`] = `
<DocumentFragment>
  <div
    class="a-container"
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render with container-class-name: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <FluentUIV9Icon
      iconName="ChevronDown24Regular"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest render without container-class-name 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest render without container-class-name: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <FluentUIV9Icon
      iconName="ChevronDown24Regular"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: Button props 1`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <FluentUIV9Icon
      iconName="ChevronDown24Regular"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: Button props 2`] = `
{
  "appearance": "transparent",
  "aria-expanded": true,
  "children": [
    <FluentUIV9Icon
      iconName="ChevronDown24Regular"
    />,
    <div>
      Some header
    </div>,
  ],
  "className": "collapsible",
  "onClick": [Function],
}
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: collapsed 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="false"
      classname="collapsible"
    >
      <div>
        Some header
      </div>
    </mock-button>
  </div>
</DocumentFragment>
`;

exports[`CollapsibleComponentTest toggle from expanded to collapsed: expanded 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <mock-button
      appearance="transparent"
      aria-expanded="true"
      classname="collapsible"
    >
      <div>
        Some header
      </div>
    </mock-button>
    <div
      class="collapsibleContent"
    >
      <div>
        Some content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
